Fix comments preview paragraph spacing (#6697)
* Fix comments preview paragraph spacing

* Update app/assets/stylesheets/comments.scss

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -333,18 +333,26 @@ a.header-link {
       width: calc(100% - 80px);
       margin: 19px auto 8px;
       border: 1px solid #dbdbdb;
+      > * {
+        margin: 4px 0px calc(1.1vw + 10px); // ok, i'm not a big fan of doing this weird math calc() but this is what we do for real comments sooo 🤷‍♂️
+      }
+
       p.loading-message {
         opacity: 0.6;
       }
+
       pre {
         overflow-x: auto;
       }
+
       kbd {
         @extend %kbd;
       }
+
       code {
         word-wrap: break-word;
       }
+
       .article-body-image-wrapper img {
         max-width: 100%;
       }
